# Horizon

./: .env  .gitignore  CLEANUP_SUMMARY.md  Cargo.toml  Dockerfile  EVENT_SYSTEM_GUIDE.md  GORC_DOCUMENTATION.md  GORC_IMPLEMENTATION_SUMMARY.md  GORC_ZONE_EVENT_IMPROVEMENTS.md  README.md  config.toml  fix_async_antipattern.md  flake.nix  horizon.toml  link_config.json  recipes.json  shell.nix  test_sysinfo.rs  test_transform_json.rs
.claude/: settings.local.json
.github/workflows/: main.yml  release.yml
backend_api/: Cargo.toml  build.rs
backend_api/src/: backend_imports.rs  lib.rs
backends/stars_beyond/: Cargo.toml
backends/stars_beyond/src/: lib.rs
crates/event_system/: Cargo.toml
crates/event_system/src/: lib.rs  types.rs
crates/example_plugin/: Cargo.toml
crates/example_plugin/src/: lib.rs
crates/game_client/: Cargo.toml
crates/game_client/src/: main.rs
crates/game_server/: Cargo.toml
crates/game_server/src/: atlas_client.rs  auth_integration_tests.rs  config.rs  error.rs  horizon_bridge.rs  horizon_compat.rs  lib.rs  logging.rs  main.rs  plugins.rs  shutdown.rs  tests.rs  utils.rs
crates/game_server/src/communication/: mod.rs
crates/game_server/src/config/: args.rs  mod.rs  settings.rs
crates/game_server/src/connection/: client.rs  manager.rs  mod.rs  response.rs
crates/game_server/src/health/: metrics.rs  mod.rs
crates/game_server/src/messaging/: mod.rs  router.rs  types.rs
crates/game_server/src/security/: rate_limiter.rs
crates/game_server/src/server/: core.rs  handlers.rs  mod.rs
crates/game_server/tests/: integration_tests.rs
crates/horizon/: Cargo.toml
crates/horizon/src/: app.rs  cli.rs  config.rs  lib.rs  logging.rs  main.rs  signals.rs
crates/horizon_bugs/src/: lib.rs
crates/horizon_event_system/: Cargo.toml  README.md
crates/horizon_event_system/.claude/: settings.local.json
crates/horizon_event_system/benches/: distance_benchmark.rs
crates/horizon_event_system/examples/: auth_core_events_example.rs  debug_event_errors.rs  show_abi_detection.rs  simple_protocol_demo.rs  simple_udp_demo.rs  test_abi_version.rs  test_string_abi_version.rs  udp_event_example.rs  zero_cost_example.rs
crates/horizon_event_system/src/: api.rs  async_logging.rs  auth_tests.rs  binary.rs  communication.rs  context.rs  events.rs  gorc_context_integration_test.rs  gorc_macros.rs  gorc_position_replication_test.rs  lib.rs  macros.rs  monitoring.rs  plugin.rs  protocol.rs  serialization.rs  system.rs  system_tests.rs  test_integration.rs  traits.rs  transport.rs  types.rs  utils.rs
crates/horizon_event_system/src/gorc/: README.md  channels.rs  config.rs  defaults.rs  examples.rs  instance.rs  integration_test.rs  mod.rs  multicast.rs  network.rs  replication_test.rs  spatial.rs  subscription.rs  system.rs  utils.rs  zones.rs
crates/horizon_event_system/src/gorc/channels/: channel.rs  layer.rs  manager.rs  mod.rs  registry.rs  types.rs
crates/horizon_event_system/src/gorc/multicast/: group.rs  lod.rs  manager.rs  mod.rs  types.rs
crates/horizon_event_system/src/gorc/network/: coordinator.rs  engine.rs  mod.rs  queue.rs  types.rs
crates/horizon_event_system/src/gorc/spatial/: mod.rs  partition.rs  quadtree.rs  query.rs
crates/horizon_event_system/src/gorc/tests/: distance_filtering_test.rs  integration_test.rs  mod.rs  performance_test.rs  realistic_movement_test.rs  virtualization_test.rs  zone_event_test.rs
crates/horizon_event_system/src/system/: cache.rs  client.rs  core.rs  emitters.rs  handlers.rs  management.rs  mod.rs  path_router.rs  stats.rs  tests.rs  udp.rs  udp_reliability.rs  udp_tests.rs
crates/horizon_plugin/: Cargo.toml
crates/horizon_plugin/src/: lib.rs
crates/player_test_client/src/: main.rs
crates/plugin_bootinator/: Cargo.toml
crates/plugin_bootinator/src/: lib.rs
crates/plugin_greeter/: Cargo.toml
crates/plugin_greeter/src/: lib.rs
crates/plugin_guild_comms/: Cargo.toml  README.md
crates/plugin_guild_comms/src/: lib.rs  types.rs
crates/plugin_homestead/: Cargo.toml
crates/plugin_homestead/src/: lib.rs  types.rs
crates/plugin_inventory_system/: Cargo.toml  README.md
crates/plugin_inventory_system/src/: lib.rs  types.rs
crates/plugin_logger/: Cargo.toml
crates/plugin_logger/examples/: test_transform.rs
crates/plugin_logger/src/: lib.rs
crates/plugin_player/: Cargo.toml
crates/plugin_player/examples/: test_transform.rs
crates/plugin_player/src/: events.rs  lib.rs  player.rs
crates/plugin_player/src/handlers/: combat.rs  communication.rs  connection.rs  movement.rs  scanning.rs
crates/plugin_skill_script/: Cargo.toml
crates/plugin_skill_script/src/: lib.rs  types.rs
crates/plugin_system/: Cargo.toml
crates/plugin_system/src/: error.rs  lib.rs  manager.rs
crates/recipe_smith/: Cargo.toml  README.md
crates/recipe_smith/src/: api.rs  crafting_queue.rs  error.rs  events.rs  lib.rs  recipe_manager.rs  storage.rs  types.rs  validation.rs
crates/server_core/: Cargo.toml
crates/server_core/src/: lib.rs
crates/server_core/src/context/: mod.rs  server_context.rs
crates/server_core/src/plugin/: loader.rs  mod.rs
crates/server_core/src/server/: config.rs  connection.rs  core.rs  event_processor.rs  message_handler.rs  mod.rs
crates/shared_types/: Cargo.toml
crates/shared_types/src/: lib.rs
crates/test_game/: Cargo.toml
crates/test_game/src/: lib.rs
crates/types/: Cargo.toml
crates/universal_plugin_system/: Cargo.toml
examples/: connection_aware_handlers.rs  restored_horizon_api.rs
examples/dual_protocol_integration/: Cargo.toml
examples/dual_protocol_integration/src/: main.rs
examples/gorc_example_plugin/: Cargo.toml
examples/gorc_example_plugin/src/: lib.rs
plugin-api/src/: lib.rs
plugin_api/: Cargo.toml  build.rs
plugin_api/src/: lib.rs  plugin_imports.rs
plugins/chronos_plugin/: Cargo.toml
plugins/community_link_plugin/: Cargo.toml
plugins/player_lib/: Cargo.toml
release_notes/: 0.22.0.md
server/: Cargo.toml
server/src/: main.rs
src/: config.rs  core.rs  main.rs  network.rs  plugins.rs  sharding.rs  world.rs
(+59 files in other folders)
