[workspace]
members = [
    "crates/horizon",
    "crates/game_server",
    "crates/event_system",
    "crates/plugin_system",

    # Plugins
    "crates/plugin_greeter",
    "crates/plugin_logger",
    "crates/plugin_inventory_system",
]

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "2.0.12"
anyhow = "1.0"
async-trait = "0.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
libloading = "0.8"
dashmap = "6.1.0"
futures = "0.3"
crossbeam = "0.8"
tempfile = "3.5"
clap = { version = "4.0", features = ["derive"] }
toml = "0.8"
tokio-tungstenite = "0.27.0"
rayon = "1.7.0"