[workspace]
resolver = "2"
members = [
    "crates/*",
    # Examples
    "examples/gorc_example_plugin",
]

[workspace.dependencies]
tokio = { version = "1.46.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "2.0.12"
anyhow = "1.0"
async-trait = "0.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
libloading = "0.8"
dashmap = "6.1.0"
futures = "0.3"
crossbeam = "0.8"
tempfile = "3.5"
clap = { version = "4.0", features = ["derive"] }
toml = "0.8"
rayon = "1.7.0"
socket2 = "0.6.0"
num_cpus = "1.13"
flate2 = "1.0"
base64 = "0.22"
const_format = "0.2"
lazy_static = "1.4.0"
once_cell = "1.19.0"
libc = "0.2"
tokio-tungstenite = "0.27.0"
sysinfo = "0.36.1"

# Git Deps
ue-types = { git = "https://github.com/tristanpoland/UE5-rs" }

# In-workspace dependencies
game_server = { path = "crates/game_server" }
horizon_event_system = { path = "crates/horizon_event_system" }
plugin_system = { path = "crates/plugin_system" }

[profile.profiling]
inherits = "release"
debug = true
strip = false
