[workspace]
resolver = "2"
members = [
    "crates/*",
    # Examples
    "examples/gorc_example_plugin",
]

[workspace.dependencies]
# === Async Runtime & Networking ===
async-trait = "0.1"
futures = "0.3"
socket2 = "0.6.0"
tokio = { version = "1.46.1", features = ["full"] }
tokio-tungstenite = "0.27.0"

# === CLI & Configuration ===
clap = { version = "4.0", features = ["derive"] }
toml = "0.8"

# === Concurrency & Performance ===
crossbeam = "0.8"
dashmap = "6.1.0"
num_cpus = "1.13"
rayon = "1.7.0"

# === Data Processing & Encoding ===
base64 = "0.22"
flate2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

# === Error Handling ===
anyhow = "1.0"
thiserror = "2.0.12"

# === Logging & Tracing ===
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }

# === Memory & Utilities ===
const_format = "0.2"
lazy_static = "1.4.0"
libc = "0.2"
once_cell = "1.19.0"

# === Platform & System ===
libloading = "0.8"
sysinfo = "0.36.1"

# === Testing & Development ===
tempfile = "3.5"

# === External Dependencies ===
ue-types = { git = "https://github.com/tristanpoland/UE5-rs" }

# === Workspace Dependencies ===
game_server = { path = "crates/game_server" }
horizon = { path = "crates/horizon" }
horizon_event_system = { path = "crates/horizon_event_system" }
plugin_system = { path = "crates/plugin_system" }
universal_plugin_system = { path = "crates/universal_plugin_system" }

[profile.profiling]
inherits = "release"
debug = true
strip = false
