[package]
name = "welcome_plugin"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
tracing = "0.1"

# These would normally point to the main project's types
# For demonstration, assuming they're available as dependencies
types = { path = "../../crates/types" }