[package]
name = "game_server"
version = "0.1.0"
edition = "2021"

[dependencies]
serde ={ workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
horizon_event_system = { path = "../horizon_event_system" }
plugin_system = { path = "../plugin_system" }
num_cpus = { workspace = true }
socket2 = { workspace = true }
tokio-tungstenite = "0.27.0"
once_cell = "1.19.0"
libc = "0.2"