[package]
name = "game_server"
version = "0.1.0"
edition = "2021"

[dependencies]
horizon_event_system = { workspace = true }
tokio-tungstenite = { workspace = true }
horizon_sockets = { workspace = true }
plugin_system = { workspace = true }
horizon_bugs = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
once_cell = { workspace = true }
num_cpus = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
sysinfo = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
libc = { workspace = true }
bug = { workspace = true }