[package]
name = "horizon"
version = "0.32.0"
edition = "2021"

[dependencies]
clap = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
tracing-subscriber = { workspace = true }
game_server = { workspace = true }
universal_plugin_system = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
