[package]
name = "horizon_event_system"
version = "0.3.0"
description = "Horizon Event System for handling events in the Horizon game server ecosystem."
license = "MIT"
edition = "2021"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
dashmap = "6.1.0"
lazy_static = "1.4.0"