[package]
name = "plugin_bootinator"
version = "0.1.0"
edition = "2024"

[dependencies]
horizon_event_system = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls", "macros", "uuid"] }
tokio = { workspace = true }