[package]
name = "plugin_greeter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
universal_plugin_system = { workspace = true }
game_server = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
chrono = { version = "0.4.41", features = ["serde"]}
futures = { workspace = true }
tracing = { workspace = true }