[package]
name = "plugin_homestead"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
event_system = { path = "../event_system" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
lru = "0.14.0"
indexmap = "2.0"
thiserror = "2.0.12"
chrono = {version = "0.4.41", features = ["serde"] }