[package]
name = "recipe_smith"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Horizon plugin for handling crafting systems with extensible recipe support"
license = "Apache-2.0"
repository = "https://github.com//repo"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
tracing = "0.1"
libloading = "0.7"

# Horizon internal dependencies
event_system = { path = "../event_system" }
plugin_system = { path = "../plugin_system" }

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
tempfile = "3.3"

[features]
default = []
client_events = []  # Optional feature for client event handling