[package]
name = "recipe_smith"
version = "1.0.0"
edition = "2021"
authors = ["Horizon Community"]
description = "Advanced crafting system plugin for Horizon game server"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[features]
default = []
client_events = ["client_integration"]
client_integration = []
advanced_crafting = ["timed_crafting", "batch_crafting"]
timed_crafting = []
batch_crafting = []
recipe_discovery = []
crafting_stations = []
skill_requirements = []
quality_system = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
async-trait = "0.1"
thiserror = "2.0"
dashmap = "6.1"
chrono = { version = "0.4", features = ["serde"] }
rand = { version = "0.9.1", features = ["serde"] }

# Event system from the main project
event_system = { path = "../event_system" }

[dev-dependencies]
tempfile = "3.5"
tokio-test = "0.4"